trunk/Archive2/2c/b8ac4a1d03071b/output
main.cpp: In function 'int main()':
main.cpp:46:5: error: 'type' is not a member of 'requirements<EqualityComparable<pathological> >'
     requirements<EqualityComparable<pathological>>::type {};
     ^
